# heimdall

./: .dockerignore  .env.example  .gitignore  404.html  AUDIT_FINDINGS.md  Dockerfile  OVERHAUL_PLAN.md  README.md  REFERENCE.md  channel-log-loop.sh  channel_log_loop.txt  config.yml  context-fix-loop.sh  context_fix_log.txt  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  refine-loop.sh  refine_log.txt  sitemap.xml
agents/: index.html
api/: index.html
architecture/: index.html
configuration/: index.html
detection/: index.html
disclaimer/: index.html
docs/: API.md  ARCHITECTURE.md  SKILLS.md  agents.md  api.md  architecture.md  configuration.md  detection.md  disclaimer.md  getting-started.md  index.md  packaging.md  tools.md  web-ui.md
getting-started/: index.html
packaging/: heimdall.service  index.html  nfpm.yml  postinstall.sh  preremove.sh
search/: search_index.json
skills/: index.html
src/: __main__.py  setup.py  setup_wizard.py  version.py
tests/: conftest.py  test_approval.py  test_async_io.py  test_audit.py  test_audit_session4.py  test_background_task.py  test_bot_interaction_config.py  test_bot_interop.py  test_browser.py  test_chat_path_optimization.py  test_circuit_breaker.py  test_claude_code_host_routing.py  test_claude_code_improvements.py  test_claude_code_routing.py  test_client_comprehensive.py  test_client_gaps.py  test_client_routing.py  test_codex_auth.py  test_codex_compaction.py  test_codex_reflection.py  test_codex_tool_loop.py  test_codex_tools.py  test_combine_bot_messages.py  test_comfyui.py  test_completion_classifier.py  test_concurrency_safety.py  test_config.py  test_context.py  test_context_retention_fixes.py  test_cross_session_continuity.py  test_dead_code_cleanup.py  test_docker_compose_tools.py  test_embedder.py  test_empty_response.py  test_error_history.py  test_executor.py  test_executor_gaps.py  test_fabrication_detection.py  test_final_security.py  (+167 more)
tools/: index.html
(+93 files in other folders)
