[project]
name = "loki"
version = "1.0.0"
description = "AI assistant Discord bot with infrastructure management"
requires-python = ">=3.12"
dependencies = [
    "discord.py[voice]>=2.7.0",
    "davey>=0.1.4",
    "discord-ext-voice-recv>=0.5.0a0",
    "pyyaml>=6.0",
    "pydantic>=2.10.0",
    "aiofiles>=24.0",
    "asyncssh>=2.18.0",
    "aiohttp>=3.11.0",
    "croniter>=2.0.0",
    "chromadb>=0.5.0",
    "websockets>=12.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aiofiles>=24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
