[project]
name = "heimdall"
version = "1.0.4"
description = "Heimdall — autonomous executor Discord bot powered by GPT-5.4"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.7.0",
    "pyyaml>=6.0",
    "pydantic>=2.10.0",
    "aiofiles>=24.0",
    "aiohttp>=3.11.0",
    "croniter>=2.0.0",
    "fastembed>=0.8.0",
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
# PDF text extraction (analyze_pdf tool)
pdf = ["PyMuPDF>=1.24.0"]
# Browser automation (browser_screenshot, browser_click, etc.)
browser = ["playwright>=1.40.0"]
# Voice channel support (STT/TTS)
voice = [
    "discord.py[voice]>=2.7.0",
    "davey>=0.1.4",
    "discord-ext-voice-recv>=0.5.0a0",
    "websockets>=12.0",
]
# All optional features
all = ["heimdall[pdf,browser,voice]"]
# Development and testing
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "aiofiles>=24.0",
    "PyMuPDF>=1.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
